# decompile-survey

./: .env.example  .gitignore  README.md  pyproject.toml
app/: README.md  start.sh
app/backend/: main.py  pdf_library.py  query_search.py
app/frontend/: index.html  package.json
docs/LLMパート設計/: LLMパート_スコープ設計.md  LLMパート_設計2.md
docs/archive/: LLMパート_設計.md  歴史パート_設計1.md
docs/全体設計/: 全体_検索スクリーニング設計.md  全体_検索スクリーニング設計_2.md
docs/歴史パート設計/: 歴史パート_設計3.md
docs/設計書/: LLMパート設計.md  全体設計.md  歴史パート設計.md
exports/: README.md
exports/pre-dedup/: all_pre-merge_20260116_1612_173件.bib
imports/: README.md
imports/ACM/: ACM_decompil_20260115_1511.bib  ACM_source-recovery_20260116_0006.bib  ACM_source-recovery_20260116_0006.query.txt
imports/IEEE/: IEEE_decompil_20260115_1522_p1.bib  IEEE_decompil_20260115_1522_p2.bib  IEEE_source-recovery_20260116_0000.bib  IEEE_source-recovery_20260116_0000.query.txt  arXiv_decompil_20260115_1700.bib
logs/: README.md  import_log.csv
notes/: 2026-01-22-slr-reference-papers.md  2026-01-22_survey-structure-hybrid-narrative-slr.md  2026-01-23-llm-decompilation-method-taxonomy.md
papers/: README.md
screening/: README.md  history.csv
screening/app/backend/: main.py  pyproject.toml
screening/app/backend/models/: __init__.py  project.py
screening/app/backend/routers/: __init__.py  imports.py  pipeline.py  projects.py  reviews.py  rules.py  runs.py  screening.py  sources.py  steps.py
screening/app/backend/step_handlers/: __init__.py  ai_screening.py  base.py  dedup_author.py  dedup_doi.py  dedup_title.py
scripts/: README.md
(+401 files in other folders)
