[project]
name = "screening-app-backend"
version = "0.2.0"
description = "Paper screening pipeline app backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "bibtexparser>=1.4.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
dev-dependencies = []
